syntax = "proto3";

package auth;

option go_package = "services/auth/proto";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc ValidateToken(ValidateRequest) returns (ValidateResponse);
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string error = 2;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  uint64 user_id = 1;
  string email = 2;
  bool valid = 3;
}